--- a/assign4/index.html
+++ b/assign4/index.html
@@ -24,7 +24,7 @@
     	<br>
 
 <div class="photos">
-    	<img src="photos/three.jpg" alt="cat">
+    	<img src="photos/one.jpg" alt="yea">
     </div>
 
     </body>
