--- a/assign4/images.html
+++ b/assign4/images.html
@@ -12,20 +12,18 @@
     </div>
 
 <div class="text">
-    	Meme photos.
+    	<span>Meme</span> photos.
     </div>
 
     	<nav>
-    		<ul>
-    			<li><a href="index.html">Home</a></li>
-    		</ul>
+    			<p style="text-align: center"><a href="index.html">Home</a></p>
     	</nav>
 
     	<br>
-<div class="photos">
+<section class="photos">
     	<img src="photos/one.jpg" alt="idk">
         <img src="photos/two.jpeg" alt="idk2">
-    </div>
+    </section>
 
     <div class="text">
         Thanks for visiting this page.
