--- a/assign4/index.html
+++ b/assign4/index.html
@@ -12,20 +12,22 @@
     </div>
 
 <div class="text">
-    	A page of memes.
+    	A page of <span>memes.</span>
     </div>
 
     	<nav>
-    		<ul>
-    			<li><a href="images.html">Images</a></li>
-    		</ul>
+    		<p style="text-align: center"><a href="images.html">Photos</a></p>
     	</nav>
 
     	<br>
 
-<div class="photos">
-    	<img src="photos/two.jpeg" alt="yea">
-    </div>
+<section class="photos">
+    	<img src="photos/one.jpg" alt="yea">
+    </section>
+
+<div class="text">
+    <a href="https://en.wikipedia.org/wiki/Water">Learn about water</a>
+</div>
 
     </body>
     </html>
