updated rina website

--- a/MIDTERMWEBSITE/index.html
+++ b/MIDTERMWEBSITE/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/chicagoflf" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
     <title>Rina Sawayama</title>
@@ -17,18 +19,18 @@
   <body>
 
   	<!-- nav bar  -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #061623;">
+    <nav class="navbar sticky-top navbar-expand-lg" style="background-color: #061623;">
       <a class="navbar-brand" href="#"><h1>RINA SAWAYAMA_</h1></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item white-text nav-link" href="#tour">TOUR<!--<span class="sr-only">(current)</span> --></a>
-          <a class="nav-item nav-link" href="#music">MUSIC</a>
-          <a class="nav-item nav-link" href="#video">VIDEO</a>
-          <a class="nav-item nav-link" href="#shop">SHOP</a>
-          <a class="nav-item nav-link" href="#contact">CONTACT</a>
+          <a class="nav-item white-text nav-link" href="#tour"><span class="navbarlinks">TOUR</span></a>
+          <a class="nav-item nav-link" href="#music"><span class="navbarlinks">MUSIC</span></a>
+          <a class="nav-item nav-link" href="#video"><span class="navbarlinks">VIDEO</span></a>
+          <a class="nav-item nav-link" href="#shop"><span class="navbarlinks">SHOP</span></a>
+          <a class="nav-item nav-link" href="#contact"><span class="navbarlinks">CONTACT</span></a>
         </div>
       </div>
     </nav>
@@ -109,7 +111,7 @@
       <p>Sept 15</p>
     </div>
     <div class="col-xs pt-3">
-     <p>The Velvet Underground</p>
+     <p>Velvet Underground</p>
     </div>
      <div class="col-xs pt-3">
     <p>Toronto, ONT</p>
@@ -154,7 +156,7 @@
       <p>Oct 19</p>
     </div>
     <div class="col-xs pt-3">
-     <p>Heaven</p>
+     <p>Heaven Nightclub</p>
     </div>
      <div class="col-xs pt-3">
     <p>London, UK</p>
@@ -211,25 +213,58 @@
 			<div class="col">
 			<img alt="picture" src="https://is4-ssl.mzstatic.com/image/thumb/Music128/v4/cf/ba/b6/cfbab6ad-e84b-9f71-3f84-1693392c9fa9/cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
-            <h5>"Flicker" - Single</h5>
+            <div class="row justify-content-center pt-3 pb-2">
+            	<h5><span class="musictitle">"Flicker" - Single</span></h5>
+            </div>
+            <div class="row justify-content-center">
+            	<a href="https://open.spotify.com/track/4dt65BryNBYLgcKq4FJjbK?si=4P79Utt6TbOy2gd0CRy0Gw" class="fab fa-spotify fa-lg"></a>
+            	<a href="https://itunes.apple.com/us/album/flicker/1443656550?i=1443656554" class="fab fa-apple fa-lg px-3"><span class="applemusic"> MUSIC</span></a>
+            	<a href="https://play.google.com/store/music/album/Rina_Sawayama_Flicker?id=Bs7pakavfbpplzmre2qzjuwzmxe" class="fab fa-google-play fa-lg pr-3"></a>
+            </div>
+
 		</div>
 		<div class="col">
 			<img alt="picture" src="https://is4-ssl.mzstatic.com/image/thumb/Music128/v4/8f/96/ff/8f96ff07-f990-8d06-fa26-9f56b700ec18/cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
-            <h5>"Cherry" - Single</h5>
+              <div class="row justify-content-center pt-3 pb-2">
+            	<h5><span class="musictitle">"Cherry" - Single</span></h5>
+            </div>
+            <div class="row justify-content-center">
+            	<a href="https://open.spotify.com/track/49eeirITrqP3pJALseu6Ed?si=13kBqVD4QwOjMJQ4mMljbw" class="fab fa-spotify fa-lg"></a>
+            	<a href="https://itunes.apple.com/us/album/cherry/1420960084?i=1420960439" class="fab fa-apple fa-lg px-3"><span class="applemusic"> MUSIC</span></a>
+            	<a href="https://play.google.com/store/music/album/Rina_Sawayama_Cherry?id=Bgcms242ervfxgpp7qathtu3lvi" class="fab fa-google-play fa-lg pr-3"></a>
+            </div>
+
 		</div>
-		</div>
+	</div>
 <br>
+
 <div class="row p-5">
 		<div class="col-xl">
 			<img alt="picture" src="https://is5-ssl.mzstatic.com/image/thumb/Music128/v4/13/a4/d7/13a4d712-662e-fd29-326f-efa9b01ba4a1/888915556030_cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
-            <h5>"Valentine (What's It Gonna Be)" - Single</h5>
+              <div class="row justify-content-center pt-3 pb-2">
+            	<h5><span class="musictitle">"Valentine (What's It Gonna Be" - Single</span></h5>
+            </div>
+            <div class="row justify-content-center">
+            	<a href="https://open.spotify.com/track/49eeirITrqP3pJALseu6Ed?si=13kBqVD4QwOjMJQ4mMljbw" class="fab fa-spotify fa-lg"></a>
+            	<a href="https://itunes.apple.com/us/album/cherry/1420960084?i=1420960439" class="fab fa-apple fa-lg px-3"><span class="applemusic"> MUSIC</span></a>
+            	<a href="https://play.google.com/store/music/album/Rina_Sawayama_Cherry?id=Bgcms242ervfxgpp7qathtu3lvi" class="fab fa-google-play fa-lg pr-3"></a>
+            </div>
+
 		</div>
 		<div class="col-xl">
 			<img alt="picture" src="https://is1-ssl.mzstatic.com/image/thumb/Music118/v4/59/5a/5d/595a5d48-5b4f-9423-55d1-4f7ec21eee40/cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
-            <h5>"RINA"</h5>
+              <div class="row justify-content-center pt-3 pb-2">
+            	<h5><span class="musictitle">"RINA"</span></h5>
+            </div>
+            <div class="row justify-content-center">
+            	<a href="https://open.spotify.com/album/0Kju1j2r9e6LG3HJ4ldvAW?si=micjJHxpQySRYrokw1RXFQ" class="fab fa-spotify fa-lg"></a>
+            	<a href="https://itunes.apple.com/us/album/rina/1299708683" class="fab fa-apple fa-lg px-3"><span class="applemusic"> MUSIC</span></a>
+            	<a href="https://play.google.com/store/music/album/Rina_Sawayama_RINA?id=Btvkrb4lyb7cu7c76jppeckmti4" class="fab fa-google-play fa-lg pr-3"></a>
+            </div>
+
 		</div>
 	</div>
 
@@ -455,22 +490,22 @@
         	<div container>
         		<div class="row pt-1 justify-content-end">
         			<div class="col-xs px-2">
-					<a href="https://www.facebook.com/rinasawayamamusic/" class="fa fa-facebook"></a>
+					<a href="https://www.facebook.com/rinasawayamamusic/" class="fab fa-facebook"></a>
 					</div>
 					<div class="col-xs px-2">
-					<a href="https://instagram.com/rinasonline" class="fa fa-instagram"></a>
+					<a href="https://instagram.com/rinasonline" class="fab fa-instagram"></a>
 					</div>
 					<div class="col-xs px-2">
-					<a href="https://twitter.com/rinasawayama" class="fa fa-twitter"></a>
+					<a href="https://twitter.com/rinasawayama" class="fab fa-twitter"></a>
 					</div>
 					<div class="col-xs px-2">
-					<a href="https://open.spotify.com/artist/2KEqzdPS7M5YwGmiuPTdr5?si=Q3Bsp60UQ5-GGkVLfLS_eQ" class="fa fa-spotify"></a>
+					<a href="https://open.spotify.com/artist/2KEqzdPS7M5YwGmiuPTdr5?si=Q3Bsp60UQ5-GGkVLfLS_eQ" class="fab fa-spotify"></a>
 					</div>
 					<div class="col-xs px-2">
-					<a href="https://www.youtube.com/user/rinasawayama" class="fa fa-youtube"></a>
+					<a href="https://www.youtube.com/user/rinasawayama" class="fab fa-youtube"></a>
 					</div>
 					<div class="col-xs px-2">
-					<a href="https://itunes.apple.com/us/artist/rina-sawayama/638343826" class="fa fa-music"></a>
+					<a href="https://itunes.apple.com/us/artist/rina-sawayama/638343826" class="fab fa-itunes"></a>
 					</div>
 				</div>
 			</div>
