FINAL MIDTERM WEBSITE (RINA SAWAYAMA)

--- a/MIDTERMWEBSITE/index.html
+++ b/MIDTERMWEBSITE/index.html
@@ -19,8 +19,8 @@
   <body>
 
   	<!-- nav bar  -->
-    <nav class="navbar sticky-top navbar-expand-lg" style="background-color: #061623;">
-      <a class="navbar-brand" href="#"><h1>RINA SAWAYAMA_</h1></a>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #061623;">
+      <a class="navbar-brand" href="#"><h1>RINA SAWAYAMA<span class="blink">_</span></h1></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,7 +36,7 @@
     </nav>
 
     <div class="embed-responsive embed-responsive-16by9">
-    	<video class="embed-responsive-item" src="assets/rina.mp4" type="video/mp4" muted loop autoplay></video>
+    	<video class="embed-responsive-item" src="assets/rinacss.mp4" type="video/mp4" muted loop autoplay></video>
     </div>
 <br><br>
 
@@ -65,10 +65,10 @@
      <div class="col-xs pt-3">
       <p>Sept 12</p>
     </div>
-    <div class="col-xs pt-3">
+    <div class="col-xs pt-3 pl-4">
       <p>Elsewhere</p>
     </div>
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 pl-4">
       <p>Brooklyn, NY</p>
     </div>
      <div class="col-xs pt-3">
@@ -83,7 +83,7 @@
     <div class="col-xs pt-3">
       <p>Bowery Ballroom</p>
     </div>
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 pl-1">
       <p>New York, NY</p>
     </div>
      <div class="col-xs pt-3">
@@ -95,10 +95,10 @@
      <div class="col-xs pt-3">
       <p>Sept 14</p>
     </div>
-    <div class="col-xs pt-3">
+    <div class="col-xs pt-3 pl-2">
       <p>Subterranean</p>
     </div>
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 pl-2">
      <p>Chicago, IL</p>
     </div>
      <div class="col-xs pt-3">
@@ -110,10 +110,10 @@
      <div class="col-xs pt-3">
       <p>Sept 15</p>
     </div>
-    <div class="col-xs pt-3">
-     <p>Velvet Underground</p>
+    <div class="col-xs pt-3 ml-n1">
+     <p>The Velvet Underground</p>
     </div>
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 ml-n5">
     <p>Toronto, ONT</p>
     </div>
      <div class="col-xs pt-3">
@@ -125,7 +125,7 @@
      <div class="col-xs pt-3">
       <p>Sept 18</p>
     </div>
-    <div class="col-xs pt-3">
+    <div class="col-xs pt-3 pl-5">
      <p>Teragram Ballroom</p>
     </div>
      <div class="col-xs pt-3">
@@ -137,13 +137,13 @@
  </div>
 
   <div class="row justify-content-between border-bottom">
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 pr-4">
       <p>Sept 20</p>
     </div>
-    <div class="col-xs pt-3">
+    <div class="col-xs pt-3 pl-5">
      <p>Rickshaw Stop</p>
     </div>
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 pl-5">
     <p>San Francisco, CA</p>
     </div>
      <div class="col-xs pt-3">
@@ -155,10 +155,10 @@
      <div class="col-xs pt-3">
       <p>Oct 19</p>
     </div>
-    <div class="col-xs pt-3">
+    <div class="col-xs pt-3 ml-n1 pr-4">
      <p>Heaven Nightclub</p>
     </div>
-     <div class="col-xs pt-3">
+     <div class="col-xs pt-3 ml-n5">
     <p>London, UK</p>
     </div>
      <div class="col-xs pt-3">
@@ -214,7 +214,7 @@
 			<img alt="picture" src="https://is4-ssl.mzstatic.com/image/thumb/Music128/v4/cf/ba/b6/cfbab6ad-e84b-9f71-3f84-1693392c9fa9/cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
             <div class="row justify-content-center pt-3 pb-2">
-            	<h5><span class="musictitle">"Flicker" - Single</span></h5>
+            	<h5><span class="musictitle">Flicker - Single</span></h5>
             </div>
             <div class="row justify-content-center">
             	<a href="https://open.spotify.com/track/4dt65BryNBYLgcKq4FJjbK?si=4P79Utt6TbOy2gd0CRy0Gw" class="fab fa-spotify fa-lg"></a>
@@ -227,7 +227,7 @@
 			<img alt="picture" src="https://is4-ssl.mzstatic.com/image/thumb/Music128/v4/8f/96/ff/8f96ff07-f990-8d06-fa26-9f56b700ec18/cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
               <div class="row justify-content-center pt-3 pb-2">
-            	<h5><span class="musictitle">"Cherry" - Single</span></h5>
+            	<h5><span class="musictitle">Cherry - Single</span></h5>
             </div>
             <div class="row justify-content-center">
             	<a href="https://open.spotify.com/track/49eeirITrqP3pJALseu6Ed?si=13kBqVD4QwOjMJQ4mMljbw" class="fab fa-spotify fa-lg"></a>
@@ -244,12 +244,12 @@
 			<img alt="picture" src="https://is5-ssl.mzstatic.com/image/thumb/Music128/v4/13/a4/d7/13a4d712-662e-fd29-326f-efa9b01ba4a1/888915556030_cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
               <div class="row justify-content-center pt-3 pb-2">
-            	<h5><span class="musictitle">"Valentine (What's It Gonna Be" - Single</span></h5>
+            	<h5><span class="musictitle">Valentine (What's It Gonna Be) - Single</span></h5>
             </div>
             <div class="row justify-content-center">
-            	<a href="https://open.spotify.com/track/49eeirITrqP3pJALseu6Ed?si=13kBqVD4QwOjMJQ4mMljbw" class="fab fa-spotify fa-lg"></a>
-            	<a href="https://itunes.apple.com/us/album/cherry/1420960084?i=1420960439" class="fab fa-apple fa-lg px-3"><span class="applemusic"> MUSIC</span></a>
-            	<a href="https://play.google.com/store/music/album/Rina_Sawayama_Cherry?id=Bgcms242ervfxgpp7qathtu3lvi" class="fab fa-google-play fa-lg pr-3"></a>
+            	<a href="https://open.spotify.com/track/0IM4jGgkg7vkYXsit9aqGZ?si=eMwoc90DREmWJcFblbm3FA" class="fab fa-spotify fa-lg"></a>
+            	<a href="https://itunes.apple.com/us/album/valentine-whats-it-gonna-be/1346333878?i=1346333881" class="fab fa-apple fa-lg px-3"><span class="applemusic"> MUSIC</span></a>
+            	<a href="https://play.google.com/store/music/album/Rina_Sawayama_Valentine_What_s_It_Gonna_Be?id=Bvc5udettnnkddkxaalc64g7m6q" class="fab fa-google-play fa-lg pr-3"></a>
             </div>
 
 		</div>
@@ -257,7 +257,7 @@
 			<img alt="picture" src="https://is1-ssl.mzstatic.com/image/thumb/Music118/v4/59/5a/5d/595a5d48-5b4f-9423-55d1-4f7ec21eee40/cover.jpg/268x0w.jpg"
             class="img-fluid mx-auto d-block">
               <div class="row justify-content-center pt-3 pb-2">
-            	<h5><span class="musictitle">"RINA"</span></h5>
+            	<h5><span class="musictitle">RINA</span></h5>
             </div>
             <div class="row justify-content-center">
             	<a href="https://open.spotify.com/album/0Kju1j2r9e6LG3HJ4ldvAW?si=micjJHxpQySRYrokw1RXFQ" class="fab fa-spotify fa-lg"></a>
@@ -472,58 +472,50 @@
 <br><br><br>
 
 <!-- Footer -->
-<footer class="page-footer font-small pt-1 pb-1 px-0">
+<footer class="page-footer font-small pt-1 pb-1 px-0 m-0">
 
-    <!-- Footer Elements -->
-    <div class="container">
       <!--Grid row-->
       <div class="row justify-content-between">
 
         <!--copyright column-->
-        <div class="col-xs pt-1 align-self-start">
-    <div class="footer-copyright"><span id="footercopyright">© 2019 RINA SAWAYAMA |</span> WEBSITE BY MIA R.
+        <div class="col-xs pt-2 pl-4 pull-left">
+    <div class="footer-copyright"><span id="footercopyright"> © 2019 RINA SAWAYAMA |</span> <span id="websiteby">WEBSITE BY MIA R.</span>
     </div>
         </div>
 
         <!--icon column-->
-        <div class="col-md-5">
-        	<div container>
-        		<div class="row pt-1 justify-content-end">
-        			<div class="col-xs px-2">
-					<a href="https://www.facebook.com/rinasawayamamusic/" class="fab fa-facebook"></a>
+        <div class="col-xs pb-1 pr-4 justify-content-end">
+        		<div class="row pt-1">
+        			<div class="col-xs px-2 pt-1">
+					<a href="https://www.facebook.com/rinasawayamamusic/" class="fab fa-facebook fa-lg"></a>
 					</div>
-					<div class="col-xs px-2">
-					<a href="https://instagram.com/rinasonline" class="fab fa-instagram"></a>
+					<div class="col-xs px-2 pt-1">
+					<a href="https://instagram.com/rinasonline" class="fab fa-instagram fa-lg"></a>
 					</div>
-					<div class="col-xs px-2">
-					<a href="https://twitter.com/rinasawayama" class="fab fa-twitter"></a>
+					<div class="col-xs px-2 pt-1">
+					<a href="https://twitter.com/rinasawayama" class="fab fa-twitter fa-lg"></a>
 					</div>
-					<div class="col-xs px-2">
-					<a href="https://open.spotify.com/artist/2KEqzdPS7M5YwGmiuPTdr5?si=Q3Bsp60UQ5-GGkVLfLS_eQ" class="fab fa-spotify"></a>
+					<div class="col-xs px-2 pt-1">
+					<a href="https://open.spotify.com/artist/2KEqzdPS7M5YwGmiuPTdr5?si=Q3Bsp60UQ5-GGkVLfLS_eQ" class="fab fa-spotify fa-lg"></a>
 					</div>
-					<div class="col-xs px-2">
-					<a href="https://www.youtube.com/user/rinasawayama" class="fab fa-youtube"></a>
+					<div class="col-xs px-2 pt-1">
+					<a href="https://www.youtube.com/user/rinasawayama" class="fab fa-youtube fa-lg"></a>
 					</div>
-					<div class="col-xs px-2">
-					<a href="https://itunes.apple.com/us/artist/rina-sawayama/638343826" class="fab fa-itunes"></a>
+					<div class="col-xs px-2 pt-1">
+					<a href="https://itunes.apple.com/us/artist/rina-sawayama/638343826" class="fas fa-music fa-lg"></a>
 					</div>
-				</div>
-			</div>
-		</div>
 
-<!--newsletter column-->
-<div class="col-xs">
-	<div class="container">
-		<div class="row justify-content-end">
-		          <form class="input-group">
+					<div class="col-xs px-2">
+					 <form class="input-group">
 		            <input type="text" class="form-control form-control-sm" placeholder="NEWSLETTER" aria-label="Your email" aria-describedby="basic-addon2">
 		            <div class="input-group-append">
-		              <button class="btn btn-sm px-2" type="button">SIGN UP</button>
+		              <button class="btn btn-sm px-2 shopbutton" type="button">SIGN UP</button>
 		            </div>
 		          </form>
-    </div>
-  </div>
-</div>
+		      </div>
+
+				</div>
+
         <!--Grid column-->
       </div>
       <!--Grid row-->
